.antlr/PythonParser.java
// Generated from e:\Luis Angel\Universidad\Computer Science\4to Año\Primer Semestre\Complementos_de_Compilacion\1-Curso 2021\Proyecto de interprete de Python\Proyecto de Python's Grammar\pythonGrammar\Python.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, DEF=24, RETURN=25, 
		RAISE=26, FROM=27, IMPORT=28, AS=29, GLOBAL=30, NONLOCAL=31, ASSERT=32, 
		IF=33, ELIF=34, ELSE=35, WHILE=36, FOR=37, IN=38, TRY=39, FINALLY=40, 
		WITH=41, EXCEPT=42, LAMBDA=43, OR=44, AND=45, NOT=46, IS=47, NONE=48, 
		TK_TRUE=49, TK_FALSE=50, CLASS=51, YIELD=52, DEL=53, PASS=54, CONTINUE=55, 
		BREAK=56, ASYNC=57, AWAIT=58, TK_COMPLEX=59, TK_LIST=60, TK_DICT=61, TK_SET=62, 
		TK_E=63, TK_TYPE=64, TK_PRINT=65, TK_PRINTLN=66, MUL=67, DIV=68, AT=69, 
		IDIV=70, ADD=71, SUB=72, MOD=73, POW=74, SIGN=75, OR_OP=76, XOR=77, AND_OP=78, 
		LEFT_SHIFT=79, RIGHT_SHIFT=80, NOT_OP=81, LESS_THAN=82, GREATER_THAN=83, 
		EQUALS=84, GT_EQ=85, LT_EQ=86, NOT_EQ=87, ASSIGN=88, ADD_ASSIGN=89, SUB_ASSIGN=90, 
		MULT_ASSIGN=91, DIV_ASSIGN=92, MOD_ASSIGN=93, AND_ASSIGN=94, OR_ASSIGN=95, 
		XOR_ASSIGN=96, LEFT_SHIFT_ASSIGN=97, RIGHT_SHIFT_ASSIGN=98, POWER_ASSIGN=99, 
		IDIV_ASSIGN=100, ARROW=101, SQRT=102, SIN=103, COS=104, MATH=105, CAST_INT=106, 
		CAST_FLOAT=107, CAST_COMPLEX=108, CAST_STRING=109, SKIP_=110, NEWLINE=111, 
		NAME=112, STRING=113, NUMBER=114, INTEGER=115, STRING_LITERAL=116, BYTES_LITERAL=117, 
		DECIMAL_INTEGER=118, OCT_INTEGER=119, HEX_INTEGER=120, BIN_INTEGER=121, 
		FLOAT_NUMBER=122, IMAG_NUMBER=123, INDENT=124, DEDENT=125;
	public static final int
		RULE_program = 0, RULE_stmt = 1, RULE_simple_stmt = 2, RULE_small_stmt = 3, 
		RULE_print_stmt = 4, RULE_expr_stmt = 5, RULE_expr_aritm = 6, RULE_expr_log = 7, 
		RULE_atom = 8, RULE_cte_log = 9, RULE_expr_assign = 10, RULE_del_stmt = 11, 
		RULE_pass_stmt = 12, RULE_flow_stmt = 13, RULE_break_stmt = 14, RULE_continue_stmt = 15, 
		RULE_return_stmt = 16, RULE_expr_list = 17, RULE_import_stmt = 18, RULE_import_name = 19, 
		RULE_import_from = 20, RULE_import_as_name = 21, RULE_dotted_as_name = 22, 
		RULE_import_as_names = 23, RULE_dotted_as_names = 24, RULE_dotted_name = 25, 
		RULE_global_stmt = 26, RULE_nonlocal_stmt = 27, RULE_compound_stmt = 28, 
		RULE_if_stmt = 29, RULE_test = 30, RULE_suite = 31, RULE_while_stmt = 32, 
		RULE_for_stmt = 33, RULE_testlist = 34, RULE_try_stmt = 35, RULE_except_clause = 36, 
		RULE_funcdef = 37, RULE_def_param_list = 38, RULE_classdef = 39, RULE_arglist = 40, 
		RULE_argument = 41, RULE_funcCall = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmt", "simple_stmt", "small_stmt", "print_stmt", "expr_stmt", 
			"expr_aritm", "expr_log", "atom", "cte_log", "expr_assign", "del_stmt", 
			"pass_stmt", "flow_stmt", "break_stmt", "continue_stmt", "return_stmt", 
			"expr_list", "import_stmt", "import_name", "import_from", "import_as_name", 
			"dotted_as_name", "import_as_names", "dotted_as_names", "dotted_name", 
			"global_stmt", "nonlocal_stmt", "compound_stmt", "if_stmt", "test", "suite", 
			"while_stmt", "for_stmt", "testlist", "try_stmt", "except_clause", "funcdef", 
			"def_param_list", "classdef", "arglist", "argument", "funcCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'.'", "'ceil'", "'fabs'", "'factorial'", 
			"'floor'", "'gcd'", "'log'", "'tan'", "'not in'", "'is not'", "'['", 
			"']'", "','", "'{'", "'}'", "'''", "'\"'", "':'", "'@='", "'...'", "'def'", 
			"'return'", "'raise'", "'from'", "'import'", "'as'", "'global'", "'nonlocal'", 
			"'assert'", "'if'", "'elif'", "'else'", "'while'", "'for'", "'in'", "'try'", 
			"'finally'", "'with'", "'except'", "'lambda'", "'or'", "'and'", "'not'", 
			"'is'", "'None'", "'True'", "'False'", "'class'", "'yield'", "'del'", 
			"'pass'", "'continue'", "'break'", "'async'", "'await'", "'complex'", 
			"'list'", "'dict'", "'set'", null, null, "'print'", "'println'", "'*'", 
			"'/'", "'@'", "'//'", "'+'", "'-'", "'%'", "'**'", null, "'|'", "'^'", 
			"'&'", "'<<'", "'>>'", "'~'", "'<'", "'>'", "'=='", "'>='", "'<='", "'!='", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", 
			"'<<='", "'>>='", "'**='", "'//='", "'->'", "'sqrt'", "'sin'", "'cos'", 
			"'math'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"DEF", "RETURN", "RAISE", "FROM", "IMPORT", "AS", "GLOBAL", "NONLOCAL", 
			"ASSERT", "IF", "ELIF", "ELSE", "WHILE", "FOR", "IN", "TRY", "FINALLY", 
			"WITH", "EXCEPT", "LAMBDA", "OR", "AND", "NOT", "IS", "NONE", "TK_TRUE", 
			"TK_FALSE", "CLASS", "YIELD", "DEL", "PASS", "CONTINUE", "BREAK", "ASYNC", 
			"AWAIT", "TK_COMPLEX", "TK_LIST", "TK_DICT", "TK_SET", "TK_E", "TK_TYPE", 
			"TK_PRINT", "TK_PRINTLN", "MUL", "DIV", "AT", "IDIV", "ADD", "SUB", "MOD", 
			"POW", "SIGN", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", "RIGHT_SHIFT", 
			"NOT_OP", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", "NOT_EQ", 
			"ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
			"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", 
			"POWER_ASSIGN", "IDIV_ASSIGN", "ARROW", "SQRT", "SIN", "COS", "MATH", 
			"CAST_INT", "CAST_FLOAT", "CAST_COMPLEX", "CAST_STRING", "SKIP_", "NEWLINE", 
			"NAME", "STRING", "NUMBER", "INTEGER", "STRING_LITERAL", "BYTES_LITERAL", 
			"DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", "FLOAT_NUMBER", 
			"IMAG_NUMBER", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Python.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					stmt();
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				simple_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				compound_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(PythonParser.NEWLINE, 0); }
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			small_stmt();
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					match(T__0);
					setState(98);
					small_stmt();
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(104);
				match(T__0);
				}
			}

			setState(107);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Small_stmtContext extends ParserRuleContext {
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public Del_stmtContext del_stmt() {
			return getRuleContext(Del_stmtContext.class,0);
		}
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public Nonlocal_stmtContext nonlocal_stmt() {
			return getRuleContext(Nonlocal_stmtContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_small_stmt);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				print_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				expr_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				del_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				pass_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				flow_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(114);
				import_stmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				global_stmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(116);
				nonlocal_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Print_stmtContext extends ParserRuleContext {
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public TerminalNode TK_PRINT() { return getToken(PythonParser.TK_PRINT, 0); }
		public TerminalNode TK_PRINTLN() { return getToken(PythonParser.TK_PRINTLN, 0); }
		public Print_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_stmt; }
	}

	public final Print_stmtContext print_stmt() throws RecognitionException {
		Print_stmtContext _localctx = new Print_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_print_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==TK_PRINT || _la==TK_PRINTLN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(120);
			match(T__1);
			setState(121);
			expr_stmt();
			setState(122);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
